[package]
name = "recipe_parser"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = {version="1.0", features=["derive"]}
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.19"
validator = { version = "0.17", features = ["derive"] }
regex = "1.10.3"
html-escape = "0.2"
